--- a/dataProcessing.ipynb
+++ b/dataProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4         800        clear        sky is clear          01n  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "max         2.315000      21.500000     100.000000     804.000000  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "4         0.0    0.993377        clear        sky is clear          01n  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,9 +870,9 @@
     "data_minmax_scaled.head()\n",
     "\n",
     "\n",
-    "# data_minmax_scaled[numerical_cols].hist(figsize=(10, 10))\n",
-    "# plt.suptitle('Min-Max Scaled Data')\n",
-    "# plt.show()\n",
+    "data_minmax_scaled[numerical_cols].hist(figsize=(10, 10))\n",
+    "plt.suptitle('Min-Max Scaled Data')\n",
+    "plt.show()\n",
     "\n",
     "\n"
    ]
@@ -886,26 +886,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{tabular}{lllrrrrrrrrrrrrlll}\n",
-      "\\toprule\n",
-      " & dt_iso & city_name & temp & temp_min & temp_max & pressure & humidity & wind_speed & wind_deg & rain_1h & rain_3h & snow_3h & clouds_all & weather_id & weather_main & weather_description & weather_icon \\\\\n",
-      "\\midrule\n",
-      "0 & 2015-01-01 00:00:00+01:00 & Valencia & -2.385146 & -2.244424 & -2.393780 & -0.011435 & 0.391572 & -0.701635 & -0.896919 & -0.189276 & -0.052105 & -0.021396 & -0.814755 & 0.369420 & clear & sky is clear & 01n \\\\\n",
-      "1 & 2015-01-01 01:00:00+01:00 & Valencia & -2.385146 & -2.244424 & -2.393780 & -0.011435 & 0.391572 & -0.701635 & -0.896919 & -0.189276 & -0.052105 & -0.021396 & -0.814755 & 0.369420 & clear & sky is clear & 01n \\\\\n",
-      "2 & 2015-01-01 02:00:00+01:00 & Valencia & -2.483450 & -2.343601 & -2.485392 & -0.011267 & 0.437229 & -1.178756 & -1.231363 & -0.189276 & -0.052105 & -0.021396 & -0.814755 & 0.369420 & clear & sky is clear & 01n \\\\\n",
-      "3 & 2015-01-01 03:00:00+01:00 & Valencia & -2.483450 & -2.343601 & -2.485392 & -0.011267 & 0.437229 & -1.178756 & -1.231363 & -0.189276 & -0.052105 & -0.021396 & -0.814755 & 0.369420 & clear & sky is clear & 01n \\\\\n",
-      "4 & 2015-01-01 04:00:00+01:00 & Valencia & -2.483450 & -2.343601 & -2.485392 & -0.011267 & 0.437229 & -1.178756 & -1.231363 & -0.189276 & -0.052105 & -0.021396 & -0.814755 & 0.369420 & clear & sky is clear & 01n \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dt_iso</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>temp_min</th>\n",
+       "      <th>temp_max</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_deg</th>\n",
+       "      <th>rain_1h</th>\n",
+       "      <th>rain_3h</th>\n",
+       "      <th>snow_3h</th>\n",
+       "      <th>clouds_all</th>\n",
+       "      <th>weather_id</th>\n",
+       "      <th>weather_main</th>\n",
+       "      <th>weather_description</th>\n",
+       "      <th>weather_icon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-01 00:00:00+01:00</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>-2.385146</td>\n",
+       "      <td>-2.244424</td>\n",
+       "      <td>-2.393780</td>\n",
+       "      <td>-0.011435</td>\n",
+       "      <td>0.391572</td>\n",
+       "      <td>-0.701635</td>\n",
+       "      <td>-0.896919</td>\n",
+       "      <td>-0.189276</td>\n",
+       "      <td>-0.052105</td>\n",
+       "      <td>-0.021396</td>\n",
+       "      <td>-0.814755</td>\n",
+       "      <td>0.36942</td>\n",
+       "      <td>clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>01n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-01 01:00:00+01:00</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>-2.385146</td>\n",
+       "      <td>-2.244424</td>\n",
+       "      <td>-2.393780</td>\n",
+       "      <td>-0.011435</td>\n",
+       "      <td>0.391572</td>\n",
+       "      <td>-0.701635</td>\n",
+       "      <td>-0.896919</td>\n",
+       "      <td>-0.189276</td>\n",
+       "      <td>-0.052105</td>\n",
+       "      <td>-0.021396</td>\n",
+       "      <td>-0.814755</td>\n",
+       "      <td>0.36942</td>\n",
+       "      <td>clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>01n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-01 02:00:00+01:00</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>-2.483450</td>\n",
+       "      <td>-2.343601</td>\n",
+       "      <td>-2.485392</td>\n",
+       "      <td>-0.011267</td>\n",
+       "      <td>0.437229</td>\n",
+       "      <td>-1.178756</td>\n",
+       "      <td>-1.231363</td>\n",
+       "      <td>-0.189276</td>\n",
+       "      <td>-0.052105</td>\n",
+       "      <td>-0.021396</td>\n",
+       "      <td>-0.814755</td>\n",
+       "      <td>0.36942</td>\n",
+       "      <td>clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>01n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-01 03:00:00+01:00</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>-2.483450</td>\n",
+       "      <td>-2.343601</td>\n",
+       "      <td>-2.485392</td>\n",
+       "      <td>-0.011267</td>\n",
+       "      <td>0.437229</td>\n",
+       "      <td>-1.178756</td>\n",
+       "      <td>-1.231363</td>\n",
+       "      <td>-0.189276</td>\n",
+       "      <td>-0.052105</td>\n",
+       "      <td>-0.021396</td>\n",
+       "      <td>-0.814755</td>\n",
+       "      <td>0.36942</td>\n",
+       "      <td>clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>01n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-01 04:00:00+01:00</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>-2.483450</td>\n",
+       "      <td>-2.343601</td>\n",
+       "      <td>-2.485392</td>\n",
+       "      <td>-0.011267</td>\n",
+       "      <td>0.437229</td>\n",
+       "      <td>-1.178756</td>\n",
+       "      <td>-1.231363</td>\n",
+       "      <td>-0.189276</td>\n",
+       "      <td>-0.052105</td>\n",
+       "      <td>-0.021396</td>\n",
+       "      <td>-0.814755</td>\n",
+       "      <td>0.36942</td>\n",
+       "      <td>clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>01n</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      dt_iso city_name      temp  temp_min  temp_max  \\\n",
+       "0  2015-01-01 00:00:00+01:00  Valencia -2.385146 -2.244424 -2.393780   \n",
+       "1  2015-01-01 01:00:00+01:00  Valencia -2.385146 -2.244424 -2.393780   \n",
+       "2  2015-01-01 02:00:00+01:00  Valencia -2.483450 -2.343601 -2.485392   \n",
+       "3  2015-01-01 03:00:00+01:00  Valencia -2.483450 -2.343601 -2.485392   \n",
+       "4  2015-01-01 04:00:00+01:00  Valencia -2.483450 -2.343601 -2.485392   \n",
+       "\n",
+       "   pressure  humidity  wind_speed  wind_deg   rain_1h   rain_3h   snow_3h  \\\n",
+       "0 -0.011435  0.391572   -0.701635 -0.896919 -0.189276 -0.052105 -0.021396   \n",
+       "1 -0.011435  0.391572   -0.701635 -0.896919 -0.189276 -0.052105 -0.021396   \n",
+       "2 -0.011267  0.437229   -1.178756 -1.231363 -0.189276 -0.052105 -0.021396   \n",
+       "3 -0.011267  0.437229   -1.178756 -1.231363 -0.189276 -0.052105 -0.021396   \n",
+       "4 -0.011267  0.437229   -1.178756 -1.231363 -0.189276 -0.052105 -0.021396   \n",
+       "\n",
+       "   clouds_all  weather_id weather_main weather_description weather_icon  \n",
+       "0   -0.814755     0.36942        clear        sky is clear          01n  \n",
+       "1   -0.814755     0.36942        clear        sky is clear          01n  \n",
+       "2   -0.814755     0.36942        clear        sky is clear          01n  \n",
+       "3   -0.814755     0.36942        clear        sky is clear          01n  \n",
+       "4   -0.814755     0.36942        clear        sky is clear          01n  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -917,9 +1071,9 @@
     "data_standard_scaled.head()\n",
     "\n",
     "\n",
-    "# data_standard_scaled[numerical_cols].hist(figsize=(10, 10))\n",
-    "# plt.suptitle('Standardized Data')\n",
-    "# plt.show()\n"
+    "data_standard_scaled[numerical_cols].hist(figsize=(10, 10))\n",
+    "plt.suptitle('Standardized Data')\n",
+    "plt.show()\n"
    ]
   }
  ],
