--- a/dataProcessing.ipynb
+++ b/dataProcessing.ipynb
@@ -903,7 +903,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the preprocessed data to CSV files\n",
+    "merged_df.to_csv('preprocessed_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
