add: svr implementation

--- a/algorithms.ipynb
+++ b/algorithms.ipynb
@@ -36,6 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot data\n",
+    "X_train\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "degrees = [1, 2, 3, 4]\n",
     "validation_errors = []\n",
     "best_degree=1\n",
@@ -165,7 +175,20 @@
     "plt.show()\n",
     "\"\"\"\n",
     "\n",
-    "# Decision tree regressor\n"
+    "# Decision tree regressor\n",
+    "model_dt = DecisionTreeRegressor(random_state=42)\n",
+    "model_dt.fit(X_train, y_train)\n",
+    "y_pred_dt = model_dt.predict(X_test)\n",
+    "mse_dt = mean_squared_error(y_test, y_pred_dt)\n",
+    "print(f\"Mean Squared Error Decision Tree: {mse_dt}\")\n",
+    "\n",
+    "plt.plot(range(len(y_test)), y_test, label=\"Actual Values\")\n",
+    "plt.plot(range(len(y_pred_dt)), y_pred_dt, label=\"Predicted Values\")\n",
+    "plt.legend()\n",
+    "plt.title(\"Decision Tree Regressor\")\n",
+    "plt.xlabel(\"Time Steps (Test Data)\")\n",
+    "plt.ylabel(\"Value\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -195,6 +218,43 @@
     "plt.ylabel(\"Value\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM with kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVM regressor (Support Vector Machine)\n",
+    "from sklearn.svm import SVR\n",
+    "model_svm = SVR()\n",
+    "model_svm.fit(X_train, y_train)\n",
+    "y_pred_svm = model_svm.predict(X_test)\n",
+    "mse_svm = mean_squared_error(y_test, y_pred_svm)\n",
+    "print(f\"Mean Squared Error SVM: {mse_svm}\")\n",
+    "\n",
+    "plt.plot(range(len(y_test)), y_test, label=\"Actual Values\")\n",
+    "plt.plot(range(len(y_pred_svm)), y_pred_svm, label=\"Predicted Values\")\n",
+    "plt.legend()\n",
+    "plt.title(\"Support Vector Machine\")\n",
+    "plt.xlabel(\"Time Steps (Test Data)\")\n",
+    "plt.ylabel(\"Value\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
