remove: code that drops a column we no longer have

--- a/algorithms.ipynb
+++ b/algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,435 +20,21 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "X_train = pd.read_csv(\"train/X_train.csv\").drop(columns=\"dt_iso\")\n",
+    "X_train = pd.read_csv(\"train/X_train.csv\")\n",
     "y_train = pd.read_csv(\"train/y_train.csv\")\n",
     "\n",
-    "X_val = pd.read_csv(\"validation/X_val.csv\").drop(columns=\"dt_iso\")\n",
+    "X_val = pd.read_csv(\"validation/X_val.csv\")\n",
     "y_val = pd.read_csv(\"validation/y_val.csv\")\n",
     "\n",
-    "X_test = pd.read_csv(\"test/X_test.csv\").drop(columns=\"dt_iso\")\n",
+    "X_test = pd.read_csv(\"test/X_test.csv\")\n",
     "y_test = pd.read_csv(\"test/y_test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>clouds_all_ Barcelona</th>\n",
-       "      <th>clouds_all_Bilbao</th>\n",
-       "      <th>clouds_all_Madrid</th>\n",
-       "      <th>clouds_all_Seville</th>\n",
-       "      <th>clouds_all_Valencia</th>\n",
-       "      <th>humidity_ Barcelona</th>\n",
-       "      <th>humidity_Bilbao</th>\n",
-       "      <th>humidity_Madrid</th>\n",
-       "      <th>humidity_Seville</th>\n",
-       "      <th>humidity_Valencia</th>\n",
-       "      <th>...</th>\n",
-       "      <th>generation other</th>\n",
-       "      <th>generation other renewable</th>\n",
-       "      <th>generation solar</th>\n",
-       "      <th>generation waste</th>\n",
-       "      <th>generation wind onshore</th>\n",
-       "      <th>forecast solar day ahead</th>\n",
-       "      <th>forecast wind onshore day ahead</th>\n",
-       "      <th>total load forecast</th>\n",
-       "      <th>price day ahead</th>\n",
-       "      <th>price actual</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>0.735294</td>\n",
-       "      <td>-0.264706</td>\n",
-       "      <td>0.088235</td>\n",
-       "      <td>0.147059</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.210137</td>\n",
-       "      <td>-0.703922</td>\n",
-       "      <td>-0.226415</td>\n",
-       "      <td>-1.185714</td>\n",
-       "      <td>0.342575</td>\n",
-       "      <td>-0.217764</td>\n",
-       "      <td>0.361454</td>\n",
-       "      <td>-0.428976</td>\n",
-       "      <td>0.015436</td>\n",
-       "      <td>0.529854</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>0.735294</td>\n",
-       "      <td>-0.264706</td>\n",
-       "      <td>0.088235</td>\n",
-       "      <td>0.147059</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.210137</td>\n",
-       "      <td>-0.842694</td>\n",
-       "      <td>-0.226016</td>\n",
-       "      <td>-1.200000</td>\n",
-       "      <td>0.233238</td>\n",
-       "      <td>-0.218153</td>\n",
-       "      <td>0.228852</td>\n",
-       "      <td>-0.643094</td>\n",
-       "      <td>-0.121375</td>\n",
-       "      <td>0.495356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>0.735294</td>\n",
-       "      <td>-0.235294</td>\n",
-       "      <td>-0.029412</td>\n",
-       "      <td>0.176471</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.210137</td>\n",
-       "      <td>-0.703922</td>\n",
-       "      <td>-0.226016</td>\n",
-       "      <td>-1.185714</td>\n",
-       "      <td>0.137120</td>\n",
-       "      <td>-0.221270</td>\n",
-       "      <td>0.136946</td>\n",
-       "      <td>-0.994241</td>\n",
-       "      <td>-0.174047</td>\n",
-       "      <td>0.464379</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>0.735294</td>\n",
-       "      <td>-0.235294</td>\n",
-       "      <td>-0.029412</td>\n",
-       "      <td>0.176471</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.210137</td>\n",
-       "      <td>-0.582009</td>\n",
-       "      <td>-0.226016</td>\n",
-       "      <td>-1.257143</td>\n",
-       "      <td>0.087156</td>\n",
-       "      <td>-0.223607</td>\n",
-       "      <td>0.067673</td>\n",
-       "      <td>-1.296160</td>\n",
-       "      <td>-0.520179</td>\n",
-       "      <td>0.101098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>-0.500</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>0.735294</td>\n",
-       "      <td>-0.235294</td>\n",
-       "      <td>-0.029412</td>\n",
-       "      <td>0.176471</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.210137</td>\n",
-       "      <td>-0.644086</td>\n",
-       "      <td>-0.229210</td>\n",
-       "      <td>-1.285714</td>\n",
-       "      <td>0.019268</td>\n",
-       "      <td>-0.220880</td>\n",
-       "      <td>0.001372</td>\n",
-       "      <td>-1.633043</td>\n",
-       "      <td>-0.784225</td>\n",
-       "      <td>-0.129825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24539</th>\n",
-       "      <td>1.375</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.617647</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.441176</td>\n",
-       "      <td>0.147059</td>\n",
-       "      <td>-0.794118</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.472407</td>\n",
-       "      <td>1.865852</td>\n",
-       "      <td>0.755516</td>\n",
-       "      <td>0.214286</td>\n",
-       "      <td>-0.205008</td>\n",
-       "      <td>0.696143</td>\n",
-       "      <td>-0.222222</td>\n",
-       "      <td>0.650762</td>\n",
-       "      <td>0.869138</td>\n",
-       "      <td>0.865677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24540</th>\n",
-       "      <td>1.750</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>-0.117647</td>\n",
-       "      <td>0.617647</td>\n",
-       "      <td>0.147059</td>\n",
-       "      <td>-0.882353</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.308427</td>\n",
-       "      <td>1.994971</td>\n",
-       "      <td>0.814615</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>-0.018148</td>\n",
-       "      <td>0.791975</td>\n",
-       "      <td>-0.065615</td>\n",
-       "      <td>0.630177</td>\n",
-       "      <td>0.763793</td>\n",
-       "      <td>0.784009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24541</th>\n",
-       "      <td>1.375</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1.375</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.470588</td>\n",
-       "      <td>-0.470588</td>\n",
-       "      <td>-0.500000</td>\n",
-       "      <td>-0.235294</td>\n",
-       "      <td>-1.029412</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.208505</td>\n",
-       "      <td>1.738731</td>\n",
-       "      <td>0.772686</td>\n",
-       "      <td>0.214286</td>\n",
-       "      <td>0.249146</td>\n",
-       "      <td>0.790806</td>\n",
-       "      <td>0.201417</td>\n",
-       "      <td>0.367065</td>\n",
-       "      <td>0.687179</td>\n",
-       "      <td>0.672772</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24542</th>\n",
-       "      <td>1.375</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.470588</td>\n",
-       "      <td>-0.470588</td>\n",
-       "      <td>-0.500000</td>\n",
-       "      <td>-0.235294</td>\n",
-       "      <td>-1.205882</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.208505</td>\n",
-       "      <td>1.865852</td>\n",
-       "      <td>0.694819</td>\n",
-       "      <td>0.300000</td>\n",
-       "      <td>0.487089</td>\n",
-       "      <td>0.702766</td>\n",
-       "      <td>0.424326</td>\n",
-       "      <td>0.221971</td>\n",
-       "      <td>0.449812</td>\n",
-       "      <td>0.352437</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24543</th>\n",
-       "      <td>1.750</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.617647</td>\n",
-       "      <td>-0.352941</td>\n",
-       "      <td>-0.705882</td>\n",
-       "      <td>-0.352941</td>\n",
-       "      <td>-1.205882</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.208505</td>\n",
-       "      <td>1.865852</td>\n",
-       "      <td>0.614955</td>\n",
-       "      <td>0.285714</td>\n",
-       "      <td>0.721671</td>\n",
-       "      <td>0.556681</td>\n",
-       "      <td>0.656379</td>\n",
-       "      <td>0.188464</td>\n",
-       "      <td>0.284270</td>\n",
-       "      <td>0.168685</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>24544 rows × 659 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       clouds_all_ Barcelona  clouds_all_Bilbao  clouds_all_Madrid  \\\n",
-       "0                     -0.500               -0.5               -0.5   \n",
-       "1                     -0.500               -0.5               -0.5   \n",
-       "2                     -0.500               -0.5               -0.5   \n",
-       "3                     -0.500               -0.5               -0.5   \n",
-       "4                     -0.500               -0.5               -0.5   \n",
-       "...                      ...                ...                ...   \n",
-       "24539                  1.375               -0.5                0.5   \n",
-       "24540                  1.750                0.0                0.5   \n",
-       "24541                  1.375                0.0                0.5   \n",
-       "24542                  1.375                0.0                0.5   \n",
-       "24543                  1.750                0.0                0.5   \n",
-       "\n",
-       "       clouds_all_Seville  clouds_all_Valencia  humidity_ Barcelona  \\\n",
-       "0                  -0.500                 -0.5             0.823529   \n",
-       "1                  -0.500                 -0.5             0.823529   \n",
-       "2                  -0.500                 -0.5             0.823529   \n",
-       "3                  -0.500                 -0.5             0.823529   \n",
-       "4                  -0.500                 -0.5             0.823529   \n",
-       "...                   ...                  ...                  ...   \n",
-       "24539               0.000                  0.0             0.617647   \n",
-       "24540               0.000                  0.0             0.823529   \n",
-       "24541               1.375                  0.0             0.470588   \n",
-       "24542               0.000                  0.5             0.470588   \n",
-       "24543               0.000                  0.5             0.617647   \n",
-       "\n",
-       "       humidity_Bilbao  humidity_Madrid  humidity_Seville  humidity_Valencia  \\\n",
-       "0             0.735294        -0.264706          0.088235           0.147059   \n",
-       "1             0.735294        -0.264706          0.088235           0.147059   \n",
-       "2             0.735294        -0.235294         -0.029412           0.176471   \n",
-       "3             0.735294        -0.235294         -0.029412           0.176471   \n",
-       "4             0.735294        -0.235294         -0.029412           0.176471   \n",
-       "...                ...              ...               ...                ...   \n",
-       "24539         0.000000         0.441176          0.147059          -0.794118   \n",
-       "24540        -0.117647         0.617647          0.147059          -0.882353   \n",
-       "24541        -0.470588        -0.500000         -0.235294          -1.029412   \n",
-       "24542        -0.470588        -0.500000         -0.235294          -1.205882   \n",
-       "24543        -0.352941        -0.705882         -0.352941          -1.205882   \n",
-       "\n",
-       "       ...  generation other  generation other renewable  generation solar  \\\n",
-       "0      ...         -1.210137                   -0.703922         -0.226415   \n",
-       "1      ...         -1.210137                   -0.842694         -0.226016   \n",
-       "2      ...         -1.210137                   -0.703922         -0.226016   \n",
-       "3      ...         -1.210137                   -0.582009         -0.226016   \n",
-       "4      ...         -1.210137                   -0.644086         -0.229210   \n",
-       "...    ...               ...                         ...               ...   \n",
-       "24539  ...          0.472407                    1.865852          0.755516   \n",
-       "24540  ...          0.308427                    1.994971          0.814615   \n",
-       "24541  ...          0.208505                    1.738731          0.772686   \n",
-       "24542  ...          0.208505                    1.865852          0.694819   \n",
-       "24543  ...          0.208505                    1.865852          0.614955   \n",
-       "\n",
-       "       generation waste  generation wind onshore  forecast solar day ahead  \\\n",
-       "0             -1.185714                 0.342575                 -0.217764   \n",
-       "1             -1.200000                 0.233238                 -0.218153   \n",
-       "2             -1.185714                 0.137120                 -0.221270   \n",
-       "3             -1.257143                 0.087156                 -0.223607   \n",
-       "4             -1.285714                 0.019268                 -0.220880   \n",
-       "...                 ...                      ...                       ...   \n",
-       "24539          0.214286                -0.205008                  0.696143   \n",
-       "24540          0.200000                -0.018148                  0.791975   \n",
-       "24541          0.214286                 0.249146                  0.790806   \n",
-       "24542          0.300000                 0.487089                  0.702766   \n",
-       "24543          0.285714                 0.721671                  0.556681   \n",
-       "\n",
-       "       forecast wind onshore day ahead  total load forecast  price day ahead  \\\n",
-       "0                             0.361454            -0.428976         0.015436   \n",
-       "1                             0.228852            -0.643094        -0.121375   \n",
-       "2                             0.136946            -0.994241        -0.174047   \n",
-       "3                             0.067673            -1.296160        -0.520179   \n",
-       "4                             0.001372            -1.633043        -0.784225   \n",
-       "...                                ...                  ...              ...   \n",
-       "24539                        -0.222222             0.650762         0.869138   \n",
-       "24540                        -0.065615             0.630177         0.763793   \n",
-       "24541                         0.201417             0.367065         0.687179   \n",
-       "24542                         0.424326             0.221971         0.449812   \n",
-       "24543                         0.656379             0.188464         0.284270   \n",
-       "\n",
-       "       price actual  \n",
-       "0          0.529854  \n",
-       "1          0.495356  \n",
-       "2          0.464379  \n",
-       "3          0.101098  \n",
-       "4         -0.129825  \n",
-       "...             ...  \n",
-       "24539      0.865677  \n",
-       "24540      0.784009  \n",
-       "24541      0.672772  \n",
-       "24542      0.352437  \n",
-       "24543      0.168685  \n",
-       "\n",
-       "[24544 rows x 659 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Plot data\n",
     "X_train\n"
