add sin and cos transformation

--- a/featureExtractionAndSelection.ipynb
+++ b/featureExtractionAndSelection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +105,32 @@
     "# Drop the rows with NaN values due to lag creation\n",
     "data.dropna(inplace=True)\n",
     "\n",
+    "# Display the first few rows of the reordered DataFrame\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply sin/cos transformations for cyclic features\n",
+    "data['hour_sin'] = np.sin(2 * np.pi * data['hour_of_day'] / 24)\n",
+    "data['hour_cos'] = np.cos(2 * np.pi * data['hour_of_day'] / 24)\n",
+    "\n",
+    "data['day_sin'] = np.sin(2 * np.pi * data['day_of_week'] / 7)\n",
+    "data['day_cos'] = np.cos(2 * np.pi * data['day_of_week'] / 7)\n",
+    "\n",
+    "data['month_sin'] = np.sin(2 * np.pi * data['month'] / 12)\n",
+    "data['month_cos'] = np.cos(2 * np.pi * data['month'] / 12)\n",
+    "\n",
+    "# Drop the original columns\n",
+    "data.drop(columns=['hour_of_day', 'day_of_week', 'month'], inplace=True)\n",
+    "\n",
     "# Order Columns\n",
     "\n",
-    "time_features = ['month', 'day_of_week', 'hour_of_day']\n",
+    "time_features = ['month_sin', 'month_cos', 'day_sin', 'day_cos', 'hour_sin', 'hour_cos']\n",
     "averaged_features = [col for col in data.columns if col.startswith('avg_')]\n",
     "lag_features = [col for col in data.columns if 'lag' in col]\n",
     "other_columns = [col for col in data.columns if col not in ['dt_iso'] + time_features + averaged_features + lag_features]\n",
@@ -118,7 +141,7 @@
     "data = data[ordered_columns]\n",
     "\n",
     "# Display the first few rows of the reordered DataFrame\n",
-    "data.head()\n"
+    "data.head()"
    ]
   },
   {
@@ -163,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
