Remove: additive model code

--- a/algorithms.ipynb
+++ b/algorithms.ipynb
@@ -41,6 +41,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -98,6 +105,13 @@
     "plt.xlabel(\"Time Steps (Test Data)\")\n",
     "plt.ylabel(\"Value\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Neural Network"
    ]
   },
   {
@@ -248,20 +262,6 @@
     "plt.ylabel(\"Value\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Additive model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
